tests/baselines/reference/parserIndexSignature5.errors.txt
tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature5.ts(2,4): error TS1022: An index signature parameter must have a type annotation.


==== tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature5.ts (1 errors) ====
    interface I {
      [a]
       ~
!!! error TS1022: An index signature parameter must have a type annotation.
    }